# platform

./: .coderabbit.yaml  .dev-bootstrap.env.example  .gitignore  .markdownlintrc  .mcp.json  .mergify.yml  .pre-commit-config.yaml  BOOKMARKS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TEST_AMBER_AUTO_REVIEW.md  acp-platform-agents-critical-review-platform.md  enable-branch-protection-prompt.md  mkdocs.yml  requirements-docs.txt
.claude/: settings.json
.claude/agents/: backend-review.md  convention-eval.md  frontend-review.md  operator-review.md  runner-review.md  security-review.md
.claude/commands/: jira.log.md
.claude/context/: state-sync-development.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  epic.md  feature_request.md  outcome.md  story.md
.github/prompts/: rfe-workflow-doc-generator.md
.github/scripts/: model-discovery.py  validate-model-manifest.py
.github/workflows/: README.md  acp-triage.yml  amber-dependency-sync.yml  amber-issue-handler.yml  ci-failure-resolver-with-agent.yml  claude-code-review.yml  claude-live-test.yml  claude-sdk-options-drift.yml  claude.yml  coderabbit-smoke-test.yml  components-build-deploy.yml  daily-sdk-update.yml  dependabot-auto-merge.yml  docs-lint.yml  docs-sync.yml  docs.yml  e2e.yml  feedback-loop.yml  frontend-lint.yml  kustomize-check.yml  lint.yml  makefile-quality.yml  mermaid-lint.yml  model-discovery.yml  pr-fixer.yml  pr-merge-review.yml  prod-release-deploy.yaml  pull-reviews.yml  regenerate-rfe-docs.yml  runner-tests.yml  runner-tool-versions.yml  screenshots.yml  sdd-preflight.yml  sdk-version-bump.yml  stale.yml  test-e2e-docker-cache.yml  test-local-dev.yml  test-registry-cache.yml  unit-tests.yml
.specify/: sdd-manifest.yaml
.specify/constitutions/: runner.md
.specify/memory/: constitution.md
.specify/specs/: runner.md
Prompts/: 01-python-linting-workflow.md  02-markdown-linting-workflow.md  03-security-scanning-workflows.md  04-stale-management-workflow.md  06-merge-pr-259-e2e-tests.md  08-e2e-tests-blocking-slack-alerts.md  09-fix-ai-bot-review-spam.md  README.md
agents/: amber.md  langfuse-rosa-expert.md
agents/sdlc/: AGENT_FRAMEWORK_ANALYSIS.md  AGENT_RELATIONSHIPS.md  README.md  (+4 more)
components/: README.md  architecture.md
components/ambient-sdk/python-sdk/: README.md  pyproject.toml  test.sh
components/ambient-sdk/python-sdk/ambient_platform/: __init__.py  _base.py  _iterator.py  _project_api.py  _project_settings_api.py  _session_api.py  _user_api.py  client.py  project.py  project_settings.py  session.py  user.py
components/runners/mcp-ambient-server/: .gitignore  README.md  pyproject.toml
components/runners/mcp-ambient-server/src/mcp_ambient_server/: __init__.py  client.py  server.py
components/runners/mcp-ambient-server/tests/: test_client.py
diagrams/: rfe-council-workflow-2025-08-mermaid.mmd
docs/: .cspell.json  .markdownlint.json  .vale.ini  CLAUDE_CODE_RUNNER.md  GITHUB_APP_SETUP.md  amber-automation.md  amber-quickstart.md  astro.config.mjs  index.md  knowledge-finder-triage.html  netlify.toml  package-lock.json  package.json  platform-sre-agent-team-design.md  platform-sre-expert-system-analysis.md  security-standards.md
e2e/: .gitignore  README.md  cypress.config.ts  package-lock.json  package.json  tsconfig.json
repomix-analysis/: 01-full-context.xml  04-backend-focused.xml  05-frontend-focused.xml  07-metadata-rich.xml  repomix-analysis-report.md
scripts/: bootstrap-workspace.sh  generate-loading-tips.py  model-discovery.py  notification-simulator.sh  sdk-options-drift-check.py  setup-minio.sh  setup-vertex-kind.sh  sync-amber-dependencies.py  sync-documentation.py  test-coderabbit-integration.sh
specs/: cl-integration-proposal-rfe-agents.md  handoff-learning-agent-loop.md  learning-agent-mockup.html  learning-agent-realistic-mockup.html
tests/: README.md  local-dev-test.sh
(+1094 files in other folders)
